@@ -6,6 +6,7 @@ importFrom("graphics",image)
 importFrom("graphics",plot)		## lmer-related
 #importFrom("lattice", levelplot)
 import("stats", "lattice")		## lmer-related
+importFrom("utils", "head", "tail")     ## lmer-related
 importFrom("grid",    grid.rect, gpar, grob)
 
 
@@ -138,7 +139,7 @@ exportClasses(
 	      )
 
 ## lmer-related
-exportClasses("coef.lmer", "lmer", "mer", "ranef.lmer",
+exportClasses("coef.lmer", "lmer", "mer", "pedigree", "ranef.lmer",
               "summary.mer", "summary.lmer")
 
 exportMethods(
@@ -192,10 +193,9 @@ exportMethods("cbind2")
 
 }
 
-
 ## lmer-related
 exportMethods("BIC", "anova", "coef", "confint", "deviance", "fitted",
-              "fixef", "formula", "lmer", "logLik", "mcmcsamp",
+              "fixef", "formula", "head", "lmer", "logLik", "mcmcsamp",
               "plot", "postVar", "qqmath", "ranef", "residuals",
-              "resid", "simulate", "summary", "terms", "update",
+              "resid", "simulate", "summary", "tail", "terms", "update",
               "vcov", "VarCorr", "with") 
