@@ -1,3 +1,8 @@
+2006-04-12  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/pedigree.R, R/AllClass.R, NAMESPACE: added a pedigree class
+	and methods for it.
+
 2006-04-12  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/dgCMatrix.R: add  storage.mode(.) <- "double" for "matrix"
